# libPCA9685

./: .dockerignore  .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  configure  netinst.sh  svc.yml  test-deploy.yml
.github/workflows/: ci_workflow.yml
examples/: CMakeLists.txt  Makefile  PCA9685demo.c  picontrol.c
examples/PCA9685demo/: CMakeLists.txt  Makefile.in  PCA9685demo.c  PCA9685demoConfig.h.in  config.status  configure  configure.ac  netinst.sh
examples/audio/: 6735l1.c  6735l2.c  6735l3.c  6735l4.c  CMakeLists.txt  README.md  analysis.c  asound.conf  bass.sh  fast.sh  hello_fft.c  netinst.sh  test.sh  vocplay.c  vocrec.c  vupeak.c  vupeak.h  vupeak.service  vupeak_wrapper
examples/olaclient/: CMakeLists.txt  README.md  blackout.dmx  blackout.sh  green.dmx  green.sh  netinst.sh  olac  olac.service  olac_wrapper  olaclient.cpp  olaclient.service
examples/olaclient/olad/: dhclient-exit-hooks  ola-universe.conf  olad.service
examples/olaclient/olad/conf/: ola-artnet.conf  ola-dummy.conf  ola-e131.conf  ola-espnet.conf  ola-ftdidmx.conf  ola-gpio.conf  ola-karate.conf  ola-kinet.conf  ola-opendmx.conf  ola-osc.conf  ola-pathport.conf  ola-port.conf  ola-renard.conf  ola-sandnet.conf  ola-server.conf  ola-shownet.conf  ola-spi.conf  ola-stageprofi.conf  ola-uartdmx.conf  ola-usbdmx.conf  ola-usbserial.conf
examples/olaclient/qlcplus/: edlins-piControlRGB.qxf  piControlRGB-demo.qxw
examples/quickstart/: CMakeLists.txt  Makefile  quickstart.c  quickstartConfig.h.in
examples/spectrum/: CMakeLists.txt  netinst.sh  test.sh
src/: CMakeLists.txt  Makefile  Makefile.in  PCA9685.c  PCA9685.h  config.status  configure  configure.ac  pca9685.c  pca9685.h
src/netinst/: install_libPCA9685.txt
system-dependency-note/: MicroOs.md
test/: CMakeLists.txt  PCA9685_expected_output  PCA9685test.c  PCA9685testConfig.h.in  PCA9685test_expected_output
